tried implementing playstate, not drawing correct

--- a/demos/pong/Makefile
+++ b/demos/pong/Makefile
@@ -13,7 +13,7 @@ CFLAGS_REL = -O3 -std=c++11 -Wall -Wextra -Werror -Wwrite-strings -pedantic-erro
 LFLAGS = -lSDL2 -lSDL2_mixer -lGL -lGLEW -lSOIL -lm
 
 # the build target executable:
-TARGET = pong
+TARGET = main
 
 all: $(TARGET)
 
